resources/styles/style.css
@font-face {
    font-family: 'Raleway';
    src: url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap')
}
body {
    background-image: url("../images/BG_Home.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
}

h1 {
    font-family: 'Raleway';
    font-size: 3.5rem;
    text-align: center;
    color: white;
}

.home-intro{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    width: 300px;
    text-align: center;
    margin: 0 auto;
    color: white;
}

table, td {
    text-align: center;
    vertical-align: center;
    font-family: 'Raleway';
}

table {
    margin-left: auto;
    margin-right: auto;
    border-spacing: 20px 0px;
}

td {
    width: 100px;
}

.buttons td {
    height: 50px;
}

.images td {
    height: 100px;
}

td a {
    background-color: orangered;
    color: white;
    border-radius: 5px;
    text-decoration: none;
    width: 100%;
    padding: 15px 30px;
    filter: drop-shadow(0px 10px 10px black)
}

td a:hover {
    color: black;
    background-color: aquamarine;
    transition-duration: 1s;
}

td a:active {
    color: black;
    background-color: rgb(127, 178, 255);
    transition-duration: 0s;
}

.images img {
    width: 1px;
    height: auto;
    opacity: 0;
    filter: drop-shadow(0px 10px 10px black)
}

